# TargetAI_Test

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml
locators/: agents_locators.py  login_locators.py
pages/: agents_page.py  base_page.py  login_page.py
tests/: test_add_agent.py
